music player with JS

--- a/index.html
+++ b/index.html
@@ -33,21 +33,9 @@
           <h1 id="title">Bittersweet Symphony</h1>
           <h2 id="singer">The Verve</h2>
         </div>
-        <div class="progress-container p1">
-          <div class="progress"></div>
-      </div>
+      
 
-      <div class="navigation p1">
-        <button id="prev" class="action-btn">
-            <i class="fas fa-backward"></i>
-        </button>
-        <button id="play" class="action-btn action-btn-big">
-            <i class="fas fa-play"></i>
-        </button>
-        <button id="next" class="action-btn">
-            <i class="fas fa-forward"></i>
-        </button>
-      </div>
+     
       </div>
 
       <div class="trivia-controls">
@@ -63,11 +51,11 @@
 
         <audio src="music/Bittersweet Symphony.mp3" id="audio"></audio>
 
-        <div class="progress-container p2">
+        <div class="progress-container">
           <div class="progress"></div>
       </div>
 
-      <div class="navigation p2">
+      <div class="navigation">
         <button id="prev" class="action-btn">
             <i class="fas fa-backward"></i>
         </button>
