--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <audio src="music/Bittersweet Symphony.mp3" id="audio"></audio>
-
+      <div>
         <div class="progress-container">
           <div class="progress"></div>
       </div>
@@ -66,7 +66,7 @@
             <i class="fas fa-forward"></i>
         </button>
       </div>
-
+    </div>
       </div>
     </div>
 
