Music Player of KaiserJC

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       <div>
         <div class="progress-container">
           <div class="progress"></div>
+          <div class="songDuration"></div>
+          <div class="songTime"></div>
+
       </div>
 
       <div class="navigation">
